fix: PZ-80 Stop the card background from flickering (#104)
* refactor: reduce the amount of DOM operations when updating rows

* refactor: change the fields updating logic

* fix: fix flickering by calculating background position on card creation

* fix: fix typo

* refactor: increase the drag threshold

* refactor: init the game

* fix: insert the card back after cancelled drag-n-drop

* refactor: create a RowData interface

* fix: fade away all rows

--- a/src/features/game/fields/WordsPicker.module.css
+++ b/src/features/game/fields/WordsPicker.module.css
@@ -4,6 +4,10 @@
   box-shadow: var(--shadow-sm);
 
   width: 100%;
-  height: 40px;
   transition: all 0.3s;
+
+  /* row */
+  & > div {
+    height: 100%;
+  }
 }
